# cuda-oxide

./: Justfile  README.md
crates/cargo-oxide/: README.md
crates/cargo-oxide/src/: backend.rs  commands.rs  main.rs
crates/cuda-async/: Cargo.toml
crates/cuda-async/src/: device_operation.rs
crates/cuda-bindings/src/: lib.rs
crates/cuda-core/src/: context.rs  device_buffer.rs  graph.rs  lib.rs
crates/cuda-core/tests/: device_copy_impls.rs  graph.rs
crates/cuda-device/src/: tcgen05.rs  thread.rs  wmma.rs
crates/cuda-macros/src/: lib.rs
crates/cuda-oxide-codegen/src/: lower.rs
crates/dialect-mir/src/: rust_intrinsics.rs  types.rs
crates/dialect-nvvm/src/ops/: tcgen05.rs  wmma.rs
crates/dialect-nvvm/tests/: ops_test.rs
crates/llvm-export/src/export/: debug.rs  externs.rs  function.rs  module.rs  ops.rs  state.rs
crates/llvm-export/tests/: export_test.rs
crates/mir-importer/: Cargo.toml
crates/mir-importer/src/translator/: body.rs  rvalue.rs
crates/mir-lower/: Cargo.toml
crates/mir-lower/src/: context.rs  lib.rs  lowering.rs
crates/mir-lower/src/convert/: interface_impls.rs  types.rs  (+1 more)
crates/mir-lower/tests/: lowering_test.rs
crates/oxide-artifacts/src/: lib.rs
crates/reserved-oxide-symbols/src/: lib.rs
crates/rustc-codegen-cuda/: README.md
crates/rustc-codegen-cuda/examples/option_ref_transmute/: Cargo.toml
crates/rustc-codegen-cuda/examples/option_ref_transmute/src/: main.rs
crates/rustc-codegen-cuda/src/: collector.rs  device_codegen.rs  lib.rs
cuda-oxide-book/compiler/: lowering-pipeline.md  rustc-codegen-cuda.md
(+12 files in other folders)
