[package]
name = "option_ref_transmute"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Sibling of `step_by` for issue #21. Exercises the *pointer-source* form of
# the same niched-enum Transmute: rustc stores `Option<&T>` as a single
# pointer (null = None, non-null = Some(&T)), and when that scalar form has
# to be materialised as the un-niched `{ i8, { ptr } }` aggregate it emits a
# `Cast(Transmute)` whose source is a pointer, not an integer.
#
# Run with:
#   cargo oxide run option_ref_transmute

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
